# AC_IaC

./: .gitignore  README.md  publish.sh  pyproject.toml  test_publish.sh
AC_IaC/: command_line.py
AC_IaC/inference/: full_pipe.py  test_full_pipe.py
tests/: test_full_pipe.py
tests/test_out_file/: A.ann
tests/test_out_structure/: S.ann
tests/test_out_structure/a/: AA.txt
tests/test_out_structure/b/bb/: BBB.ann
