[project]
name = "AC_IaC"
version = "0.1.0"
authors = [
  { name="Hugo Meinhof", email="me@theoreticallyhugo.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "transformers",
  "datasets",
  "colorama",
  "torch"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.scripts]
AC-IaC = "AC_IaC.command_line:main"

[project.urls]
Homepage = "https://github.com/Theoreticallyhugo/AC_IaC"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/Theoreticallyhugo/AC_IaC"
Issues = "https://github.com/Theoreticallyhugo/AC_IaC/issues"
Changelog = "https://github.com/Theoreticallyhugo/AC_IaC/blob/main/CHANGELOG.md"
Data = "https://tudatalib.ulb.tu-darmstadt.de/handle/tudatalib/2422"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
